// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle with React element head 1`] = `
<div
  class="text text_type_input text_color_input mb-4 absolute head element"
  data-testid="head"
>
  <button
    class="text text_type_button text_color_primary button undefined false "
    data-testid="btn"
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</div>
`;

exports[`Circle with React element tail 1`] = `
<div
  class="text text_type_input text_color_input mt-4 absolute tail30 element"
  data-testid="tail"
>
  <button
    class="text text_type_button text_color_primary button undefined false "
    data-testid="btn"
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</div>
`;

exports[`Circle with head 1`] = `
<div
  class="text text_type_input text_color_input mb-4 absolute head string"
  data-testid="head"
>
  1
</div>
`;

exports[`Circle with index 1`] = `
<p
  class="text text_type_input text_color_input mt-4 absolute index"
  data-testid="index"
>
  5
</p>
`;

exports[`Circle with isSmall 1`] = `
<div
  class="circle  small default"
  data-testid="isSmall"
  seconddata-testid="isSmallTrue"
>
  <p
    class="text text_type_circle text_color_input letter"
    data-testid="letter"
  />
</div>
`;

exports[`Circle with letters 1`] = `
<p
  class="text text_type_circle text_color_input letter"
  data-testid="letter"
>
  a
</p>
`;

exports[`Circle with state changing 1`] = `
<div
  class="circle   changing"
  data-testid="isSmall"
  seconddata-testid="isBig"
>
  <p
    class="text text_type_circle text_color_input letter"
    data-testid="letter"
  />
</div>
`;

exports[`Circle with state default 1`] = `
<div
  class="circle   default"
  data-testid="isSmall"
  seconddata-testid="isBig"
>
  <p
    class="text text_type_circle text_color_input letter"
    data-testid="letter"
  />
</div>
`;

exports[`Circle with state modified 1`] = `
<div
  class="circle   modified"
  data-testid="isSmall"
  seconddata-testid="isBig"
>
  <p
    class="text text_type_circle text_color_input letter"
    data-testid="letter"
  />
</div>
`;

exports[`Circle with tail 1`] = `
<div
  class="text text_type_input text_color_input mt-4 absolute tail30 string"
  data-testid="tail"
>
  1
</div>
`;

exports[`Circle without text 1`] = `
<p
  class="text text_type_circle text_color_input letter"
  data-testid="letter"
/>
`;
